--- a/App/R1/express_reg1/pk2/views/index.ejs
+++ b/App/R1/express_reg1/pk2/views/index.ejs
@@ -131,7 +131,8 @@
 
 
   <script>
-    let user_data = [];
+    get_table_data();
+    
     $("#register").click(function () {
       var first_name = $("#first_name").val();
       var last_name = $("#last_name").val();
