--- a/App/R1/express_reg1/pk2/views/index.ejs
+++ b/App/R1/express_reg1/pk2/views/index.ejs
@@ -194,6 +194,7 @@
     $("#table_user").on("click", ".delete", function () {
       ukey = $(this).attr("dt");
       $.post("/api/user/delete", {user_key:ukey}, function(res){
+        get_table_data();
       })
     });
 
