--- a/App/R1/express_reg1/pk2/views/index.ejs
+++ b/App/R1/express_reg1/pk2/views/index.ejs
@@ -155,11 +155,11 @@
         status
       }
 
-      if($(this).attr("state") == "register"){        
+      if($(this).attr("state") == "register"){//create here     
         $.post("/api/users", dt, function (res) {
           get_table_data();
         })
-      }else if ($(this).attr("state") == "view") {
+      }else if ($(this).attr("state") == "view") {//read here
         location.reload(); //refresh
       }else if ($(this).attr("state") == "edit") {//update here
         dt.user_key = selected_user;
@@ -209,6 +209,8 @@
       })
     });
 
+
+
     $("#table_user").on("click", ".edit", function () {
         ukey = $(this).attr("dt");
         $.get("/api/user/" + ukey).done(function (v) {
@@ -228,6 +230,7 @@
                         .removeClass("btn-danger").removeClass("btn-success");
         })
       });
+
 
     $("#table_user").on("click", ".view", function () {
       ukey = $(this).attr("dt");
@@ -253,19 +256,12 @@
         $(this).toggle($(this).text().toLowerCase().indexOf(txt) > -1);
       })
     })
+  
+  
   </script>
 
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
   </script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script> -->
+  
 </body>
 
 </html>
